--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
-netlify.toml [build] publish = "." command = "echo 'no build'"
+[build]
+publish = "."
+command = "echo 'no build'"
 
-[[redirects]] from = "/*" to = "/index.html" status = 200
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
